Limited vt. vt_dial=1,2,3

--- a/VentUI.ui
+++ b/VentUI.ui
@@ -1103,6 +1103,9 @@
                 <bold>true</bold>
                </font>
               </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(0, 0, 0);</string>
+              </property>
               <property name="text">
                <string>Range-1</string>
               </property>
