--- a/VentUI.ui
+++ b/VentUI.ui
@@ -718,6 +718,9 @@
               <property name="singleStep">
                <number>2</number>
               </property>
+              <property name="pageStep">
+               <number>2</number>
+              </property>
               <property name="value">
                <number>14</number>
               </property>
