--- a/VentUI.ui
+++ b/VentUI.ui
@@ -1845,7 +1845,7 @@
               <property name="geometry">
                <rect>
                 <x>0</x>
-                <y>140</y>
+                <y>60</y>
                 <width>141</width>
                 <height>41</height>
                </rect>
@@ -2646,11 +2646,17 @@ background-color: rgba(255, 255, 255, 0);</string>
              <widget class="QLabel" name="lblStartStop">
               <property name="geometry">
                <rect>
-                <x>430</x>
-                <y>60</y>
-                <width>221</width>
+                <x>500</x>
+                <y>0</y>
+                <width>150</width>
                 <height>31</height>
                </rect>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>150</width>
+                <height>16777215</height>
+               </size>
               </property>
               <property name="font">
                <font>
