--- a/VentUI.ui
+++ b/VentUI.ui
@@ -2648,13 +2648,19 @@ background-color: rgba(255, 255, 255, 0);</string>
                <rect>
                 <x>500</x>
                 <y>0</y>
-                <width>150</width>
+                <width>210</width>
                 <height>31</height>
                </rect>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>210</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="maximumSize">
                <size>
-                <width>150</width>
+                <width>250</width>
                 <height>16777215</height>
                </size>
               </property>
